[package]
name = "drag-hook"
version = "0.0.1"
authors = ["Peter Frank <mdm23@gmx.de>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
gloo = "0.2.1"
js-sys = "0.3.37"
log = "0.4"
wasm-bindgen = "0.2.60"
web_logger = "0.2"
yew-functional = { git = "https://github.com/yewstack/yew" }
yew = { git = "https://github.com/yewstack/yew" }

[dependencies.web-sys]
version = "0.3.37"
features = [
    "Document",
    "Window",
]
